Changes made on the registration page

--- a/html/register.html
+++ b/html/register.html
@@ -14,25 +14,25 @@
         <div class="form-container">
             <div class="column" id="column1">
                 <label for="username">Username</label><br />
-                <input type="text" id="username" name="username" required /><br /><br>
+                <input type="text" id="username" name="username" /><br /><br>
                 
                 <label for="firstname">First name</label><br />
-                <input type="text" id="firstname" name="firstname" required /><br /><br>
+                <input type="text" id="firstname" name="firstname" /><br /><br>
 
                 <label for="lastname">Last name</label><br />
-                <input type="text" id="lastname" name="lastname" required /><br /><br>
+                <input type="text" id="lastname" name="lastname" /><br /><br>
 
                 <label for="gender">Gender:</label>
-                <select id="gender" name="gender" required>
+                <select id="gender" name="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                 </select><br /><br>
 
                 <label for="email">Email</label><br />
-                <input type="text" id="email" name="email" required /><br /><br>
+                <input type="text" id="email" name="email" /><br /><br>
 
                 <label for="task">Task to be done</label><br />
-                <input type="text" id="task" name="task" required /><br /><br>
+                <input type="text" id="task" name="task"  /><br /><br>
 
             </div>
             <div class="column">
@@ -48,10 +48,10 @@
                 <input type="tel" id="phone" name="phone" /><br /><br>
 
                 <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password" required /><br /><br>
+                <input type="password" id="password" name="password" /><br /><br>
 
                 <label for="confirmpassword">Confirm Password:</label><br>
-                <input type="password" id="confirmpassword" name="confirmpassword" required /><br /><br>
+                <input type="password" id="confirmpassword" name="confirmpassword" /><br /><br>
                 
                 <button type="submit" class="btn btn-primary">Register</button>
             </div>
