--- a/html/register.html
+++ b/html/register.html
@@ -53,7 +53,7 @@
                 <label for="confirmpassword">Confirm Password:</label><br>
                 <input type="password" id="confirmpassword" name="confirmpassword" /><br /><br>
                 
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary"><a class="register" href="./view.html">Register</a></button>
             </div>
             
         </div>
