--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="password" placeholder="password">
                 </div>
-                <div class="text-center" href=""><button type="submit" class="btn btn-color px-5 mb-5 w-100">Login</button></div>
+                <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100"><a href="./view.html">Login</a></button></div>
                 <div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
                   Registered? <a href="#" class="text-dark fw-bold"> Create an
                     Account</a>
