--- a/public/delete.html
+++ b/public/delete.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@100;400;700&family=Montserrat:wght@100;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/delete.css">
+    <link rel="stylesheet" href="delete.css">
     <script src="https://kit.fontawesome.com/aff02a4ba3.js" crossorigin="anonymous"></script>
     <h2 class="p-3 mb-3 text-white" style="background-color: #395464">View Tasks</h2>
   </head>
   <body>
     <div class="container">
       <input id="myInput" type="text" onkeyup="myFunction()" placeholder="Search for names.." class="form-control mb-3">
-      <a id="registernew" href="../html/register.html">Register new Task</a>
+      <a id="registernew" href="register.html">Register new Task</a>
       <table id="myTable" class="table table-bordered table-hover">
         <thead class="table-secondary">
           <tr class="header">
@@ -47,7 +47,7 @@
                 </td>
                   </td>
                 <td>
-                    <a class="btn btn-warning" href="../html/update.html">Edit</a>
+                    <a class="btn btn-warning" href="update.html">Edit</a>
                 </td>
             </tr>
             <tr>
@@ -64,7 +64,7 @@
                 </td>
                   </td>
                 <td>
-                    <a class="btn btn-warning" href="../html/update.html">Edit</a>
+                    <a class="btn btn-warning" href="update.html">Edit</a>
                 </td>
             </tr>
             <tr>
@@ -81,13 +81,13 @@
                 </td>
                   </td>
                 <td>
-                    <a class="btn btn-warning" href="../html/update.html">Edit</a>
+                    <a class="btn btn-warning" href="update.html">Edit</a>
                 </td>
             </tr>
         </tbody>
       </table>
     </div>
-    <script src="../js/delete.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="delete.js"></script>
+    <script src="search.js"></script>
   </body>
 </html>
