--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="login.css">
     <title>LOGIN</title>
 </head>
 
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                   <input type="password" class="form-control" id="password" placeholder="password">
                 </div>
-                <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100"><a href="./view.html">Login</a></button></div>
+                <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100"><a href="view.html">Login</a></button></div>
                 <div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
                   Registered? <a href="#" class="text-dark fw-bold"> Create an
                     Account</a>
