--- a/public/register.html
+++ b/public/register.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update</title>
-    <link rel="stylesheet" href="../css/registration.css">
+    <title>reg</title>
+    <link rel="stylesheet" href="registration.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body style="background-color: beige;">
-    <h2 class="text-center" style="margin-top: 30px; font-family: 'Times New Roman', Times, serif;">UPDATE PAGE</h2>
+    <h2 class="text-center" style="margin-top: 30px; font-family: 'Times New Roman', Times, serif;">REGISTRATION PAGE</h2>
     <form class="form"> 
         <div class="form-container">
             <div class="column" id="column1">
@@ -53,7 +53,7 @@
                 <label for="confirmpassword">Confirm Password:</label><br>
                 <input type="password" id="confirmpassword" name="confirmpassword" /><br /><br>
                 
-                <button type="submit" class="btn btn-primary"><a class="register" href="./view.html">Update</a></button>
+                <button type="submit" class="btn btn-primary"><a class="register" href="view.html">Register</a></button>
             </div>
             
         </div>
